--- a/src/index.html
+++ b/src/index.html
@@ -1,16 +1,26 @@
+<!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE-Edge" />
-    <meta
-      name="viewport"
-      content="minimum-scale=1, initial-scale=1, width=device-width, shrink-to-fit=no, user-scalable=yes, viewport-fit=cover"
+    <meta charset="utf-8" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+    <link
+      rel="shortcut icon"
+      type="image/x-icon"
+      href="assets/favicon.ico"
     />
-    <title>Funex</title>
-    <link rel="icon" href="/favicon.ico" />
-    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="assets/styles/global.css"
+    />
+    <title>VCCS Dark Mode</title>
   </head>
   <body lang="en">
-    <div id="funnex-root-node"></div>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="funex-root"></div>
+    <script src="js/popup.js"></script>
   </body>
 </html>
